--- a/PrinterySystem/Views/Manager/OrderProcessing.cshtml
+++ b/PrinterySystem/Views/Manager/OrderProcessing.cshtml
@@ -21,17 +21,15 @@
     <div class="container-fluid mt-3 main">
         <div class="row mb-3">
             <div class="col-md-4">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="订单ID" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" method="post">
+                    <input class="form-control mr-sm-2" type="search" name="OrCustomer" placeholder="客户名称" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
             <div class="col-md-4">
-                @*<form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2 col-md-2" type="search" placeholder="日期">
-                    <span>~</span>
-                    <input class="form-control mr-sm-2 col-md-2" type="search" placeholder="日期">
-                </form>*@
+                <form class="form-inline my-2 my-lg-0" method="post">
+                    <input class="form-control mr-sm-2" name="CreateDate" type="search" placeholder="订单创建日期" onclick="WdatePicker()">
+                </form>
             </div>
             <div class="col-md-4 text-right my-2 my-lg-0">
             </div>
@@ -201,6 +199,7 @@
     <script src="~/Content/Dashboradasset/js/jquery-3.2.1.slim.min.js"></script>
     <script src="~/Content/Dashboradasset/js/popper.min.js"></script>
     <script src="~/Content/Dashboradasset/js/bootstrap.min.js"></script>
+    <script src="~/Scripts/DatePicker/WdatePicker.js"></script>
     <script type="text/javascript">
         function deletOrder() {
             debugger;
