--- a/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
@@ -18,8 +18,8 @@
     <div class="container-fluid mt-3 main">
         <div class="row mb-3">
             <div class="col-md-4">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" method="post">
+                    <input class="form-control mr-sm-2" type="search" name="PostInkName" placeholder="墨水名称" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
