--- a/PrinterySystem/Views/Manager/ProduceManagement.cshtml
+++ b/PrinterySystem/Views/Manager/ProduceManagement.cshtml
@@ -22,8 +22,8 @@
     <div class="container-fluid mt-3 main">
         <div class="row mb-3">
             <div class="col-md-4">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="工单ID" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" method="post">
+                    <input class="form-control mr-sm-2" type="search" name="PostProductName" placeholder="产品名称" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
