--- a/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PurchasingManagement.cshtml
@@ -12,26 +12,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="~/Content/Dashboradasset/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="~/Content/Dashboradasset/css/all.css">
-    @*<script src="https://cdn.bootcss.com/popper.js/1.14.7/umd/popper.min.js"></script>*@
 </head>
 <body>
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4">采购单处理</h1>
         <p class="lead">点击按钮可切换</p>
     </div>
-    <div class="row">
-        <div class="col-3">
-            <div class="list-group list-group-horizontal-lg" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">纸张采购</a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">油墨采购</a>
+    <div class="accordion" id="accordionExample">
+        <div class="card">
+            <div class="card-header" id="headingOne">
+                <div class="mb-0">
+                    <div class="row">
+                        <div class="col-9">
+                            <button class="btn btn-outline-dark text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                纸张采购
+                            </button>
+                        </div>
+                        <div class="col-3">
+                            <form class="form-inline my-2 my-lg-0" method="post">
+                                <input class="form-control mr-sm-2" type="search" name="PostPaperName" placeholder="纸张名称" aria-label="Search">
+                                <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
 
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
                     <table class="table table-responsive-md table-hover">
                         <thead>
                             <tr>
@@ -105,12 +113,34 @@
 
                         if (paperList != null && paperList.Count > 0)
                         {
-                            @Html.Partial("Pager")
+                            @Html.Partial("Pager1")
 
                         }
                     }
                 </div>
-                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header" id="headingTwo">
+                <div class="mb-0">
+                    <div class="row">
+                        <div class="col-9">
+                            <button class="btn btn-outline-danger text-left" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                油墨采购
+                            </button>
+                        </div>
+                        <div class="col-3">
+                            <form class="form-inline my-2 my-lg-0" method="post">
+                                <input class="form-control mr-sm-2" type="search" name="PostInkName" placeholder="墨水名称" aria-label="Search">
+                                <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
                     <table class="table table-responsive-md table-hover">
                         <thead>
                             <tr>
@@ -609,21 +639,21 @@
             $('#removePaperModal').modal('hide')
             $(".modal-backdrop.fade").hide()
             $.ajax({
-            type: "POST",
-            url: "../Manager/DeletePaperPurchase",
-            contentType: "application/json;charset=UTF-8",
-            dataType: "json",
-            contentType: "application/json",
-            data: JSON.stringify(
-                { purchaseguid: purchaseid }
-            ),
-            success: function (result) {
-                debugger;
-                if (result != null)
-                     alert("删除成功！")
+                type: "POST",
+                url: "../Manager/DeletePaperPurchase",
+                contentType: "application/json;charset=UTF-8",
+                dataType: "json",
+                contentType: "application/json",
+                data: JSON.stringify(
+                    { purchaseguid: purchaseid }
+                ),
+                success: function (result) {
+                    debugger;
+                    if (result != null)
+                        alert("删除成功！")
                     location.reload()
-            }
-        })
+                }
+            })
         }
         function deleteInKList() {
             debugger;
@@ -631,21 +661,21 @@
             $('#removeInkModal').modal('hide')
             $(".modal-backdrop.fade").hide()
             $.ajax({
-            type: "POST",
-            url: "../Manager/DeleteInkPurchase",
-            contentType: "application/json;charset=UTF-8",
-            dataType: "json",
-            contentType: "application/json",
-            data: JSON.stringify(
-                { purchaseguid: purchaseid }
-            ),
-            success: function (result) {
-                debugger;
-                if (result != null)
-                     alert("删除成功！")
+                type: "POST",
+                url: "../Manager/DeleteInkPurchase",
+                contentType: "application/json;charset=UTF-8",
+                dataType: "json",
+                contentType: "application/json",
+                data: JSON.stringify(
+                    { purchaseguid: purchaseid }
+                ),
+                success: function (result) {
+                    debugger;
+                    if (result != null)
+                        alert("删除成功！")
                     location.reload()
-            }
-        })
+                }
+            })
         }
     </script>
 </body>
