--- a/PrinterySystem/Views/Person4Manager/EmployeeInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/EmployeeInfo.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "~/Views/Shared/_LayoutSysManager.cshtml";
+    ViewBag.Title = "雇员管理";
 }
 <!DOCTYPE html>
 <html>
@@ -16,8 +17,8 @@
     <div class="container-fluid mt-3 main">
         <div class="row mb-3">
             <div class="col-md-4">
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" method="post">
+                    <input class="form-control mr-sm-2" type="search" name="PostEmployeeName" placeholder="输入雇员姓名" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
